# TinkerUsd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  build_settings.json
cmake/: compiler_config.cmake  qtAdvancedDockingSystem.cmake  utils.cmake
cmake/modules/: FindUSD.cmake
resources/: CMakeLists.txt  darktheme.css  drak_ads.css  resources.qrc
source/: CMakeLists.txt  api.h  main.cpp
source/camera/: CMakeLists.txt  usdCamera.cpp  usdCamera.h
source/core/: CMakeLists.txt  globalSelection.cpp  globalSelection.h  usdDocument.cpp  usdDocument.h  utils.cpp  utils.h
source/pythonAPI/: CMakeLists.txt  api.h  global.cpp  global.h
source/pythonAPI/python/: CMakeLists.txt  __init__.py  module.cpp  wrapGlobal.cpp
source/render/: CMakeLists.txt  grid.cpp  grid.h  hudOverLay.cpp  hudOverLay.h  usdDrawTargetFBO.cpp  usdDrawTargetFBO.h  usdRenderEngineGL.cpp  usdRenderEngineGL.h
source/ui/: CMakeLists.txt  cameraSettingsDialog.cpp  cameraSettingsDialog.h  mainMenubar.cpp  mainMenubar.h  mainWindow.cpp  mainWindow.h  undoManager.cpp  undoManager.h  viewportOpenGLWidget.cpp  viewportOpenGLWidget.h
source/ui/composition/: CMakeLists.txt  compositionInspectorWidget.cpp  compositionInspectorWidget.h  contentBrowser.cpp  contentBrowser.h  layerStack.cpp  layerStack.h  primComposition.cpp  primComposition.h
source/ui/logger/: CMakeLists.txt  loggerWidget.cpp  loggerWidget.h
source/ui/outliner/: CMakeLists.txt  outlinerItem.cpp  outlinerItem.h  outlinerModel.cpp  outlinerModel.h  outlinerView.cpp  outlinerView.h  outlinerWidget.cpp  outlinerWidget.h
source/ui/propertyEditor/: CMakeLists.txt  README.md  propertyWidget.cpp  propertyWidget.h  searchBar.cpp  searchBar.h  specialFilterKeyword.h
source/ui/propertyEditor/commands/: CMakeLists.txt  usdUndoAttributeCommand.cpp  usdUndoAttributeCommand.h
source/ui/propertyEditor/common/: CMakeLists.txt  utils.cpp  utils.h
source/ui/propertyEditor/customWidgets/: CMakeLists.txt  incrementalSlider.cpp  incrementalSlider.h  numericWidgets.cpp  numericWidgets.h  smallBoxWidget.cpp  smallBoxWidget.h  valueEntryLineEdit.cpp  valueEntryLineEdit.h
source/ui/propertyEditor/modelView/: CMakeLists.txt  propertyContextMenu.cpp  propertyContextMenu.h  propertyDelegate.cpp  propertyDelegate.h  propertyItem.cpp  propertyItem.h  propertyModel.cpp  propertyModel.h  propertyProxy.cpp  propertyProxy.h  propertyTreeView.cpp  propertyTreeView.h  usdAttributeWrapper.cpp  usdAttributeWrapper.h
source/ui/propertyEditor/valueEditors/: CMakeLists.txt  abstractPropertyEditor.cpp  abstractPropertyEditor.h  arrayEditor.cpp  arrayEditor.h  booleanEditor.cpp  booleanEditor.h  colorEditor.cpp  colorEditor.h  enumEditor.cpp  enumEditor.h  enumWidget.cpp  enumWidget.h  factory.cpp  factory.h  fileEditor.cpp  fileEditor.h  metaTypeRegistration.h  numericEditor.cpp  numericEditor.h  stringEditor.cpp  stringEditor.h  variantSetEditor.cpp  variantSetEditor.h  vector2dEditor.cpp  vector2dEditor.h  vector3dEditor.cpp  vector3dEditor.h
source/ui/scriptEditor/: CMakeLists.txt  codeEditor.cpp  codeEditor.h  pythonHighlighter.cpp  pythonHighlighter.h  scriptEditor.cpp  scriptEditor.h
source/undo/: CMakeLists.txt  debugCodes.h  usdUndoBlock.cpp  usdUndoBlock.h  usdUndoManager.cpp  usdUndoManager.h  usdUndoStateDelegate.cpp  usdUndoStateDelegate.h  usdUndoableItem.cpp  usdUndoableItem.h
